# RPG_game

./: CMakeLists.txt
inc/: boss.h  charater.h  player.h  playsound.h
src/: Evil.cpp  cowboy.cpp  faHai.cpp  hate.cpp  main.cpp  playsound.cpp
